--- a/twilight/.project
+++ b/twilight/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gato java</name>
+	<name>cat java</name>
 	<comment></comment>
 	<projects>
 	</projects>
